--- a/src/sass/base/_intro.scss
+++ b/src/sass/base/_intro.scss
@@ -11,6 +11,7 @@ $cover_size: 135vh;
 
 .intro {
     height: 100vh;
+    filter: saturate(0.5);
 
     .forest {
         position: absolute;
@@ -73,6 +74,20 @@ $cover_size: 135vh;
             }
         }
     }
+
+    &::after {
+        content: '';
+        bottom: 100px;
+        left: 50%;
+
+        transform: translate(-50%, 0);
+
+        position: absolute;
+
+        box-sizing: content-box;
+
+        animation: nextSectionHint 2s ease-in-out 10s infinite;
+    }
 }
 
 @keyframes runningThroughTheForest {
@@ -90,5 +105,18 @@ $cover_size: 135vh;
     }
     to {
         box-shadow: 0px 0px 0px #fff0 inset;
+    }
+}
+
+@keyframes nextSectionHint {
+    0%, 100% {
+        border-left: solid 3vh #0000;
+        border-right: solid 3vh #0000;
+        border-top: solid 3vh #0000;
+    }
+    50% {
+        border-left: solid 8vh #0000;
+        border-right: solid 8vh #0000;
+        border-top: solid 8vh #0007;
     }
 }
