--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -13,6 +13,11 @@
   margin: 0;
   padding: 0;
   font: inherit;
+  
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
